--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
     "firebase": "^12.6.0",
+    "i18next": "^25.7.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.4.0",
     "react-router-dom": "^7.10.0"
   },
   "devDependencies": {
